[gd_scene load_steps=2 format=3 uid="uid://level_intro_scene"]

[ext_resource type="Script" path="res://scenes/ui/level_intro.gd" id="1_script"]

[node name="LevelIntro" type="CanvasLayer"]
layer = 15
script = ExtResource("1_script")

[node name="Container" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="ColorRect" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
mouse_filter = 2

[node name="ContentBox" type="VBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="AccentBar" type="ColorRect" parent="Container/ContentBox"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="LevelName" type="Label" parent="Container/ContentBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Level Name"
horizontal_alignment = 1

[node name="LevelID" type="Label" parent="Container/ContentBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 24
text = "1-1"
horizontal_alignment = 1
